@@ -1,5 +1,6 @@
 local lib = require("__janky-quality__/lib/lib")
 local libq = require("__janky-quality__/lib/quality")
+local trigger_mods = require(lib.p.prot .. "trigger_mods")
 
 local m = {}
 m.entity_mods = {}
@@ -107,7 +108,7 @@ m.default_energy_source_mod = m.default_mod {
 m.default_roboport_mod = m.combine(m.default_mod { "charging_energy" }, m.default_energy_source_mod)
 
 -- Default high level modification function for attack_parameters
-m.default_attack_parameters = m.mod { ["attack_parameters.range"] = m.mult(0.1) }
+m.default_attack_parameters = m.mod { ["attack_parameters.range"] = m.mult(0.1), attack_parameters = trigger_mods.ammo }
 
 -- Updates the modifier list with a new table. Prefix category with "-" to replace
 function m.update_mods(new_mods)
